# tiny-AES-minimal-example

./: CMakeLists.txt  meson.build
src/: main.cpp
